--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@babel/runtime": "^7.13.10",
-    "@cjy0208/pro-provider": "^0.0.0-beta.2",
     "@cjy0208/pro-form": "^0.0.0-beta.26",
+    "@cjy0208/pro-provider": "^0.0.0-beta.2",
     "@cjy0208/pro-table": "^0.3.0-beta.28",
     "@cjy0208/pro-utils": "^0.0.0-beta.16",
     "@cjy0208/tools": "^0.0.0-beta.6",
     "@types/hoist-non-react-statics": "^3.3.1",
-    "dayjs": "^1.10.4",
     "ahooks": "^3.1.4",
     "antd": "^4.20.6",
+    "dayjs": "^1.10.4",
     "hoist-non-react-statics": "^3.3.2"
   },
   "devDependencies": {
@@ -39,11 +39,13 @@
   "sideEffects": [
     "*.less"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/CJY0208/pro-components",
   "repository": {
     "type": "git",
     "url": "https://github.com/CJY0208/pro-components.git"
   },
-  "maintainers": ["chenjy"],
   "license": "ISC"
 }
