--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -20,9 +20,9 @@
     "@cjy0208/pro-utils": "^0.0.0-beta.16",
     "@cjy0208/tools": "^0.0.0-beta.6",
     "@types/hoist-non-react-statics": "^3.3.1",
-    "dayjs": "^1.10.4",
     "ahooks": "^3.1.4",
     "antd": "^4.16.13",
+    "dayjs": "^1.10.4",
     "hoist-non-react-statics": "^3.3.2"
   },
   "devDependencies": {
@@ -37,11 +37,13 @@
   "sideEffects": [
     "*.less"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/CJY0208/pro-components",
   "repository": {
     "type": "git",
     "url": "https://github.com/CJY0208/pro-components.git"
   },
-  "maintainers": ["chenjy"],
   "license": "ISC"
 }
