--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -18,9 +18,9 @@
     "@babel/runtime": "^7.13.10",
     "@cjy0208/tools": "^0.0.0-beta.6",
     "@types/hoist-non-react-statics": "^3.3.1",
-    "dayjs": "^1.10.4",
     "ahooks": "^3.1.4",
     "antd": "^4.20.6",
+    "dayjs": "^1.10.4",
     "hoist-non-react-statics": "^3.3.2"
   },
   "devDependencies": {
@@ -35,11 +35,13 @@
   "sideEffects": [
     "*.less"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/CJY0208/pro-components",
   "repository": {
     "type": "git",
     "url": "https://github.com/CJY0208/pro-components.git"
   },
-  "maintainers": ["chenjy"],
   "license": "ISC"
 }
