--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,11 +34,13 @@
   "sideEffects": [
     "*.less"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/CJY0208/pro-components",
   "repository": {
     "type": "git",
     "url": "https://github.com/CJY0208/pro-components.git"
   },
-  "maintainers": ["chenjy"],
   "license": "ISC"
 }
